# VSCode-Stm32-Universal

./: .gitignore  ProjectGenerator_Rust.sh  README.md
stm32f10x_cpp/: .gitignore  CMakeLists.txt  README.md  STM32F103C8Tx_FLASH.ld.in
stm32f10x_cpp/App/: App.cmake  CubeMX.ioc
stm32f10x_cpp/App/Core/Inc/: main.h
stm32f10x_cpp/App/Core/Src/: gpio.c  main.c
stm32f10x_cpp/App/User/Inc/: MainCPP.hpp
stm32f10x_cpp/App/User/Src/: MainCPP.cpp
stm32f10x_cpp/Boot/: Boot.cmake
stm32f10x_cpp/Boot/Core/Src/: main.c
stm32f10x_cpp/cmake/: CompilerSelectro.cmake  stm32f103.cmake
stm32f10x_cpp/openocd/: AutoSWV.sh  STLink-SWD.cfg  STLink-SWV.cfg  StLink-swd-swv.cfg
stm32f10x_cpp/openocd/tools/: README.MD
stm32f10x_cpp/openocd/tools/itmdump/: itmdump
stm32f10x_cpp/openocd/tools/uartdump/: uartdump
stm32f10x_gcc/: .mxproject  Makefile  Makefile.backup  stm32f10x_gcc.ioc  vscode.code-workspace
stm32f10x_gcc/Core/Src/: main.c
stm32f10x_rust/: Cargo.toml
stm32f10x_rust/.cargo/: config
stm32f10x_rust/src/: main.rs
