[package]
name = "stm32f10x_rust"
version = "0.1.0"
authors = ["MuratovAS <lexamzx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Зависимости для разработки под процессор Cortex-M3
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32f1xx-hal]
version = "0.5.2"
features = ["stm32f100", "rt"]

# Позволяет использовать "cargo fix"!
[[bin]]
name = "stm32f10x_rust"
test = false
bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
#lto = true # Лучшая оптимизация
